...
                android:text="Команда 1:"
                android:textSize="18sp"
                android:textColor="@color/colorBlack"
                android:layout_marginRight="20sp"/>

            <EditText
                android:id="@+id/textView_player_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorRed"
                android:textCursorDrawable="@color/colorRed"
                android:text="Зайцы"
                android:textSize="18sp" />
...
                android:text="Команда 2:"
                android:textSize="18sp"
                android:textColor="@color/colorBlack"
                android:layout_marginRight="20sp"/>

            <EditText
                android:id="@+id/textView_player_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorRed"
                android:textCursorDrawable="@color/colorRed"
                android:text="Волки"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/button_to_mode"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:text="Продолжить"
            android:background="@drawable/button_states"
            tools:ignore="OnClick"
            android:layout_gravity="center"
...
