...
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:orientation="horizontal"
            android:gravity="center">

            <EditText
                android:id="@+id/editText_to_add_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorRed"
                android:textCursorDrawable="@color/colorRed"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="Введите слово" />

            <Button
                android:id="@+id/button_to_add_word"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginLeft="20sp"
                android:background="@drawable/button_states"
                android:text="+" />

        </LinearLayout>

        <Button
            android:id="@+id/button_continue_to_start"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:background="@drawable/button_states"
            android:text="Продолжить"
            tools:ignore="OnClick"
...
