...
                android:layout_height="wrap_content"
                android:text="@string/time_for_step"
                android:textSize="18sp"
                android:textColor="@color/colorBlack" />

            <Spinner
                android:id="@+id/spinner_time_for_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

...
                android:layout_height="wrap_content"
                android:text="Количество слов в шляпе:"
                android:textSize="18sp"
                android:textColor="@color/colorBlack" />

            <Spinner
                android:id="@+id/spinner_words_in_vocabular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

...
                    android:textSize="18sp" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/button_to_players_names"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40sp"
            android:background="@drawable/button_states"
            android:text="Продолжить"
...
